# qulacs2023_benchmark

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  plot.py  plotcnt.py  pyproject.toml  run.py  run_cnt.py
.devcontainer/: Dockerfile  devcontainer.json
batched-qsim/: .clang-format  .gitignore  CMakeLists.txt  README.md
batched-qsim/misc/: custatevec_batched_bench.cu
batched-qsim/scripts/: run_bench.sh  run_bench2.sh
batched-qsim/src/: gate.cpp  gate.hpp  main.cpp  test.cpp
benchmarks/Kokkos/: CMakeLists.txt  Dockerfile  build.sh  build_by_Dockerfile.sh  main.cpp  run_main.sh
benchmarks/Qulacs_now/: Dockerfile  build.sh  build_by_docker.sh  main.cu  test  test.cpp
benchmarks/kokkos/: Dockerfile  build.sh  main.cpp
benchmarks/kokkos_cpu/: Dockerfile  build.sh  main.cpp
benchmarks/kokkos_cpu_multi/: build.sh  main.cpp
benchmarks/kokkos_cpu_single/: CMakeLists.txt  build.sh
benchmarks/kokkos_new/: CMakeLists.txt  Dockerfile  experimental.hpp  main.cpp
benchmarks/openacc/: build.sh  main.cpp  run_main.sh
benchmarks/qulacs/: Dockerfile  build.sh  main.cpp
benchmarks/qulacs_cpu/: Dockerfile  main.cpp
benchmarks/qulacs_cpu_multi/: build.sh  main.cpp
benchmarks/qulacs_cpu_single/: main.cpp
benchmarks/qulacs_cpu_single_nosimd/: Dockerfile  build_gcc.sh
benchmarks/qulacs_gpu/: Dockerfile  build.sh  main.cu
benchmarks/qulacs_now/: Dockerfile  main.cu
benchmarks/sycl/: Dockerfile  build.sh  main.cpp  oneapi-for-nvidia-gpus-2023.1.0-cuda-12.0-linux.sh  oneapi-for-nvidia-gpus-2023.2.0-cuda-12.0-linux.sh  run_main.sh
benchmarks/unroll_test/: CMakeLists.txt  Dockerfile  build.sh  build_by_Dockerfile.sh  run_main.sh
benchmarks/unroll_test/src/: batched_gate.hpp  gate.hpp  main.cpp  util.hpp
output/: kokkos_3.json  kokkos_4.json  kokkos_5.json  kokkos_new_3.json  kokkos_new_4.json  kokkos_new_5.json  qulacs.json  qulacs_0.json  qulacs_1.json  qulacs_2.json  qulacs_3.json  qulacs_4.json  qulacs_5.json  qulacs_gpu_3.json  qulacs_gpu_4.json  qulacs_gpu_5.json
qulacs2023_benchmark/: run.py
