[tool.poetry]
name = "qulacs2023_benchmark"
version = "0.1.0"
description = ""
authors = ["Qulacs-Osaka <qulacs.osaka@gmail.com>"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Qulacs-Osaka/qulacs2023_benchmark"
homepage = "https://github.com/Qulacs-Osaka/qulacs2023_benchmark"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
click = "^8.1.3"
tqdm = "^4.65.0"
matplotlib = "^3.7.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.942"
isort = "^5.10.1"

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
